--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A code-editor playground for the gd-sprest framework.",
   "main": "index.js",
   "scripts": {
+    "all": "npm run build && npm run prod",
     "build": "webpack --mode=development",
     "prod": "webpack --mode=production"
   },
@@ -20,15 +21,15 @@
   "homepage": "https://github.com/gunjandatta/code#readme",
   "dependencies": {
     "ace-builds": "^1.4.12",
-    "gd-sprest-bs": "^5.4.2"
+    "gd-sprest-bs": "^8.4.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "babel-loader": "^8.1.0",
-    "html-loader": "^1.1.0",
-    "ts-loader": "^8.0.2",
-    "webpack": "^4.44.1",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "html-loader": "^1.3.2",
+    "ts-loader": "^8.3.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   }
 }
